--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -9,7 +9,7 @@
   
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Kosugi+Maru&display=swap" rel="stylesheet">
 
-  <title>NIGGAS IN PARIS</title>
+  <title>ONLINE PORTFOLIO</title>
 </head>
 <body>
   <header>
@@ -29,7 +29,7 @@
   <section class="home" id="home">
     <div class="home-text">
       <h5>Hello, I'm</h5>
-      <h1>LeBron James</h1>
+      <h1>Renee Edmerson A. Dolon</h1>
       <h6>a passionate <span>Web Dev</span>. Welcome to my portfolio, where you'll find about myself and showcase of my projects</h6>
       <a href="#" class="btn">About me</a>
       <a href="#" class="btn">Project</a>
