--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <a href="#" class="logo">&lt;<span>Renee Edmerson A. Dolon</span>&gt;</a>
+    <a href="#" class="logo">&lt;<span>Personal Portfolio</span>&gt;</a>
     
     <div class="bx bx-menu" id="menu-icon"></div>
 
