--- a/index.html
+++ b/index.html
@@ -95,15 +95,12 @@
 
   <section class="resume" id="resume">
     <div class="center">
-      <h3>Education</h3>
+      <h3>Projects</h3>
     </div>
 
     <div class="resume-content">
       <div class="box">
-        <h6></h6>
-        <h4></h4>
-        <p></p>
-        <h5></h5>
+        
       </div>
 
       <div class="box">
