--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
       <h5>Hello, I'm</h5>
       <h1>Renee Edmerson A. Dolon</h1>
       <h6>a passionate <span>Web Dev</span>. Welcome to my portfolio, where you'll find about myself and showcase of my projects</h6>
-      <a href="#" class="btn">About me</a>
+      <a href="#about" class="btn">About me</a>
       <a href="#" class="btn">Project</a>
     </div>
 
     <div class="home-img">
-      <img src="img/pic.png" alt="OMSIM">
+      <img src="persona.jpg" alt="OMSIM">
     </div>
   </section>
 
   <section class="about" id="about">
     <div class="about-img">
-      <img src="img/about.png" alt="OMSIM">
+      <img src="persona.jpg" alt="OMSIM">
     </div>
 
     <div class about-text>
