--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <p>A creative and driven individual with a love for technology and a desire to make a positive impact through innovative web solutions.</p>
 
       <div class="main-btn">
-        <a href="#" class="btn">Download CV</a>
+        <a href="resume.pdf" class="btn">Download Resume</a>
       </div>
     </div>
   </section>
