--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <div class="resume-content">
       <div class="box">
         <h6></h6>
+        <a href="calculator.html">CALCULATOR</a>
         <h4></h4>
         <p></p>
         <h5></h5>
