--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
       <div class="box">
         <h6></h6>
+        <a href="switch.html">SWITCH</a>
         <h4></h4>
         <p></p>
         <h5></h5>
