--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       <div class="row">
         <i class='bx bx-code-alt'></i>
         <h3></h3>
+        <a href="https://www.facebook.com/RedDolon.RedChidori/"><img src="fb.png"></a>
         <p></p>
       </div>
 
