--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="#about">About</a></li>
       <li><a href="#resume">Project</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li><a href="#services">Services</a></li>
       <li><input id="idk" type="color"></li>
     </ul>
   </header>
