--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <ul class="navbar">
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
-      <li><a href="#resume">Project</a></li>
-      <li><a href="#services">Servicest</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="services">Contact</a></li>
+      <li><a href="#resume">Projects</a></li>
+      <li><a href="#contact">Services</a></li>
       <li><input id="idk" type="color"></li>
     </ul>
   </header>
