--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <section class="services" id="services">
     <div class="center">
-      <h3>NIGGA</h3>
+      <h3>GET IN TOUCH</h3>
     </div>
 
     <div class="service-content">
