--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <ul class="navbar">
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
-      <li><a href="services">Contact</a></li>
+      <li><a href="#services">Contact</a></li>
       <li><a href="#resume">Projects</a></li>
       <li><a href="#contact">Services</a></li>
       <li><input id="idk" type="color"></li>
