--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
   </section>
 
-  <section class="services" id="services">
+  <section class="services" id=*"services">
     <div class="center">
       <h3>GET IN TOUCH</h3>
     </div>
