--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
       <div class="box">
         <h6></h6>
+        <a href="clock.html">CLOCK</a>
         <h4></h4>
         <p></p>
         <h5></h5>
