--- a/clock.html
+++ b/clock.html
@@ -8,7 +8,7 @@
         @import url('httpS://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
         body{
-            background: url(images/clock.gif);
+            background: url(zawarudo.jpg);
             color: #fff;
             width: 100%;
             background-size: cover;
