--- a/index.html
+++ b/index.html
@@ -70,22 +70,14 @@
 
       <div class="row">
         <i class='bx bx-code-alt'></i>
-        <h3></h3>
-        <p></p>
+        <a href="https://discord.com/channels/@me"><img src="discord.png"></a>
       </div>
 
       <div class="row">
         <i class='bx bxl-sketch'></i>
-        <h3></h3>
-        <p></p>
+        <a href="https://github.com/MeNoir"><img src="github.png"></a>
       </div>
 
-      <div class="row">
-        <i class='bx bxl-sketch'></i>
-        <h3></h3>
-        <p></p>
-      </div>
-    </div>
   </section>
 
   <section class="cta">
