--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
     </div>
   </section>
 
-  <section class="services" id=*"services">
+  <section class="services" id="services">
     <div class="center">
       <h3>GET IN TOUCH</h3>
     </div>
 
     <div class="service-content">
       <div class="row">
-        <a href="https://www.facebook.com/RedDolon.RedChidori/"><img src="fb.png"></a>
+        <a href="https://www.facebook.com/RedDolon.RedChidori/"><img src="fb.png" class="nigga"></a>
       </div>
 
       <div class="row">
-        <a href="https://discord.com/channels/@me"><img src="discord.png"></a>
+        <a href="https://discord.com/channels/@me"><img src="discord.png" class="nigga"></a>
       </div>
 
       <div class="row">
-        <a href="https://github.com/MeNoir"><img src="github.png"></a>
+        <a href="https://github.com/MeNoir"><img src="github.png" class="nigga"></a>
       </div>
 
   </section>
