--- a/calculator.html
+++ b/calculator.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-image: url(/images/calcu.png);
+            background-image: url(math.jpg);
             background-size: cover;
             align-items: center;
             background-repeat: no-repeat;
