--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h1>Renee Edmerson A. Dolon</h1>
       <h6>a passionate <span>Web Dev</span>. Welcome to my portfolio, where you'll find about myself and showcase of my projects</h6>
       <a href="#about" class="btn">About me</a>
-      <a href="#" class="btn">Project</a>
+      <a href="#resume" class="btn">Project</a>
     </div>
 
     <div class="home-img">
